# Thesis-OOX

./: .gitignore  Cargo.toml  Dockerfile  dingendienietkloppen  idea  inconsistencies  readme.md  temp
benches/: OOX_benchmark.rs  experiment1.rs  experiment2.rs  experiment2_3.rs  experiment2_4.rs  oox_benchmark.rs
benchmark_programs/ITST/: data_flow_anomaly.oox
benchmark_programs/LinkedList/: experiment2 copy.oox  experiment2.oox
benchmark_programs/defects4j/: README.md  collections_25.oox
benchmark_programs/experiment1/: 1Node.oox  2Node.oox  3Node.oox  4Node.oox  5Node.oox
benchmark_programs/experiment_m/: 0.oox  1.oox  2.oox  3.oox
benchmarks/defects4j/: collections_25.oox
examples/: absolute_simplest.oox  break_flow.oox  bsort.oox  class_with_constructor.oox  class_with_methods.oox  comments.oox  exceptions.oox  intLinkedList.oox  linkedlist.oox  multiple_constructors.oox  nonstatic_function.oox  simple_try_catch.oox  simpleclass.oox  simpleclass2.oox  simpleclass3.oox  simpleclass4.oox  supertest.oox  test11.oox  this_method.oox
experiment/: .gitignore  collect_data.py  run_benchmark.py
src/: cfg.rs  concretization.rs  dsl.rs  error.rs  eval.rs  exception_handler.rs  exec.rs  fold.rs  language.rs  lexer.rs  lib.rs  main.rs  merge.rs  mutation.rs  oox.pest  parser.rs  parser_example.rs  parser_pom.rs  positioned.rs  pretty_print.rs  reachability.rs  resolver.rs  stack.rs  state.rs  statistics.rs  symbol_table.rs  symbolic_exec.rs  symbolic_table.rs  syntax.rs  typeable.rs  typing.rs  unique_supply.rs  utils.rs  z3_checker.rs
tests/: cast_test.rs
(+101 files in other folders)
