[package]
name = "oox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
nom = "7"
pom = "3.2.0"
pest = "2.0"
pest_derive = "2.0"
ordered-float = "3.4.0"
itertools = "0.10.5"
z3 = {version="0.11.2", features = ["static-link-z3"]}
slog = "2.7.0" # Logging library
slog-bunyan = "2.4.0"
num = "0.4.0" # Needed for one function (is that worth it?)
